Fix coming soon to nowrap text.

--- a/website/src/css/main.css
+++ b/website/src/css/main.css
@@ -432,4 +432,5 @@ body {
 .cms-txt > span {
     font-size: 3em;
     letter-spacing: 50px;
+    white-space: nowrap;
 }
